--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=task4system
+spring.datasource.url=jdbc:mysql://localhost:3306/task4system?allowPublicKeyRetrieval=true&useSSL=false
+
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.jpa.generate=true
+spring.jpa.hibernate.ddl-auto=create-drop
